<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8DDEB"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/header_text"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E47FAD"
            android:text="@string/button_one_text"
            android:tag="@string/passage_text_one"
            android:textColor="#000000"
            android:onClick="pressedOne" />

        <Button
            android:id="@+id/button2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E47FAD"
            android:text="@string/button_two_text"
            android:tag="@string/passage_text_two"
            android:textColor="#000000"
            android:onClick="pressedTwo" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#E47FAD"
            android:text="@string/button_three_text"
            android:tag="@string/passage_text_three"
            android:textColor="#000000"
            android:onClick="pressedThree" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>